--- a/src/main/java/com/orange/qa/config/config.properties
+++ b/src/main/java/com/orange/qa/config/config.properties
@@ -1,4 +1,4 @@
 url = https://opensource-demo.orangehrmlive.com/
 browser = chrome
-username = Admin
-password = admin123
+username = testman12345
+password = testman12345
